# context-aware

./: .dockerignore  .gitignore  Makefile  README.md  clean_rebuild_guide.md  hotspot.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: development.yaml  production.yaml  training.yaml
docker/: Dockerfile.jetson  Dockerfile.server  docker-compose.yml
docs/architecture/: ASYNC-PERCEPTION.md  INTENT-CNN.md  INTENT_CNN_DESIGN.md  system-design.md
docs/guides/: GUIDE.md  JETSON-FRESH-INSTALL-GUIDE.md
docs/planning/: PLAN-phase1-foundation.md  PLAN-phase1.5-intent-training-server.md  PLAN-phase2-perception.md  PLAN-phase3-rl-vlm.md  PLAN-phase4-optimization.md  PLAN-phase5-research.md  TASK-twist-mux-setup.md
docs/progress/: PHASE_1_SUMMARY.md
pdf/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib  research_outline.md
proto/: messages.proto
research_data/: README.md  research_results.md
scripts/: ros2_bridge.py
scripts/data/: auto_watcher.py  autolabel.py  build_intent_manifest.py  explore_data.py  explore_roi.py  import_labels.py  validate_dataset.py
scripts/deploy/: automate_benchmarks.py  benchmark.py  export_engine.py  export_intent_model.py  model_manager.py
scripts/infra/: auto_updater.py  (+4 more)
src/: __init__.py  config.py  logging_config.py  main.py
tests/: __init__.py  conftest.py  test_autolabel_track_sequence.py  test_communication.py  test_data_logging.py  test_dataset_manager.py  test_dataset_validation.py  test_intent_dataset_api.py  test_navigation.py  test_perception.py
(+32 files in other folders)
